# notsobad

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: PRD.md
docs/adr/: 0001-in-app-account-setup.md  0002-tauri-desktop-stack.md  0003-local-labels-no-server-mutation.md
docs/research/: local-llm-models.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_messages_readpath.sql  0003_body_is_html.sql  0004_folders.sql  0005_folder_selection.sql
src-tauri/src/: commands.rs  error.rs  keychain.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: mod.rs  ollama.rs  translate.rs
src-tauri/src/connection/: imap.rs  mod.rs  smtp.rs  sync.rs
src-tauri/src/db/: accounts.rs  ai_results.rs  folders.rs  messages.rs  mod.rs
src-tauri/tests/: no_server_mutation.rs
src/lib/: ipc.ts  store.svelte.ts  types.ts
src/lib/components/: AccountWizard.svelte  InboxList.svelte  MessageBody.svelte  Sidebar.svelte  ThreadReader.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
