[package]
name = "notsobad"
version = "0.1.0"
description = "Local-first, AI-assisted email client"
authors = ["Qa'id Jacobs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notsobad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
imap = "2"
native-tls = "0.2"
thiserror = "2"

[dev-dependencies]
# in-process recording IMAP/SMTP server for the no-server-mutation guardrail test
rustls = "0.23"

